# rag-financial-ai-agent-llamapack-llamaindex

./: .cursorignore  .cursorrules  .env.local.example  .env.local.example.new  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  jest.config.js  jest.setup.js  next.config.mjs  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  todo.md  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
__tests__/: placeholder.test.ts
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/chat/stream/: route.ts
app/api/health/: route.ts
app/api/upload/: route.ts
components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
docs/: API.md
lib/: cache.ts  errorHandler.ts  fileExtractors.ts  ingest.ts  llama.ts  logger.ts  ratelimit.ts  storage.ts  upload.ts
server/: cli_eval.py  config.py  ingest.py  llama_setup.py  main.py  rag.py  requirements.txt
server/tests/: __init__.py  test_placeholder.py
types/: mammoth.d.ts
